--- a/index.html
+++ b/index.html
@@ -343,55 +343,44 @@
     }
     .w1Sprite.hidden{ display:none; }
 
-    /* =========================================================
-       NEU: DOPPEL-WÜRFELFLÄCHE (Q0 + Q1) ALS EINE EINHEIT
-       - zwei W1-Würfelflächen mit Innenrahmen nebeneinander
-       - verbunden über Wrapper (ein Objekt)
-       - gemeinsamer Schlagschatten ins Boxinnere (nach Süden)
-       ========================================================= */
-
-    .doubleFaceLayer{
+    /* ==========================
+       NEU: VERBUNDENE DOPPEL-WÜRFELFLÄCHE (Q0+Q1)
+       - genau 2B..4G (6×3 Zellen)
+       - EIN zusammenhängendes Bild (kein "irgendwo klein")
+       - wirft Schlagschatten ins Boxinnere (nach Süden)
+       ========================== */
+    .doubleCubeLayer{
       position:absolute;
       inset:0;
-      z-index: 5; /* gleich wie W1Layer: über Floor, unter Ball */
+      z-index: 5; /* über Floor, unter Ball (gleich wie W1) */
       pointer-events:none;
     }
 
-    /* gemeinsamer Schatten der doppelten Länge -> ins Boxinnere */
-    .doubleFaceShadow{
+    .doubleCubeShadow{
       position:absolute;
       left: calc(1 * var(--step));  /* Start Q0: 2B */
-      top:  calc(1 * var(--step));  /* Start Q0: 2B */
-      width: calc( (2 * (3 * var(--cell) + 2 * var(--cell-gap))) ); /* doppelte Würfelseitenlänge */
+      top:  calc(1 * var(--step));  /* 2B */
+      width: calc(6 * var(--cell) + 5 * var(--cell-gap)); /* Q0+Q1 zusammen */
       height: calc(3 * var(--cell) + 2 * var(--cell-gap));
       background: transparent;
       border-radius: 0;
-      z-index: 1;
-      /* Schatten NUR nach innen (Süden) */
+      /* Schlagschatten INS BOXINNERE (nach Süden) */
       box-shadow:
-        0 22px 26px rgba(0,0,0,0.30),
-        0 12px 18px rgba(0,0,0,0.18);
+        0 22px 28px rgba(0,0,0,0.34),
+        0 12px 18px rgba(0,0,0,0.22);
+      z-index: 1;
     }
 
-    /* Wrapper = „verbunden“ (ein Objekt, ein Ankerpunkt) */
-    .doubleFace{
+    .doubleCubeFace{
       position:absolute;
       left: calc(1 * var(--step));  /* Start Q0: 2B */
-      top:  calc(1 * var(--step));  /* Start Q0: 2B */
-      width: calc( (2 * (3 * var(--cell) + 2 * var(--cell-gap))) );
-      height: calc(3 * var(--cell) + 2 * var(--cell-gap));
-      display:flex;
-      flex-direction: row;
-      gap: 0px;         /* auf Stoß */
-      z-index: 2;
-    }
-
-    /* einzelne Würfelfläche = Optik wie W1Cube (ohne Schlagschatten-Element) */
-    .doubleFace .face{
-      width: calc(3 * var(--cell) + 2 * var(--cell-gap));
+      top:  calc(1 * var(--step));  /* 2B */
+      width: calc(6 * var(--cell) + 5 * var(--cell-gap)); /* 2 Würfelflächen verbunden */
       height: calc(3 * var(--cell) + 2 * var(--cell-gap));
       box-sizing: border-box;
       border-radius: 0;
+
+      /* gleiche Optik wie W1-Würfelfläche */
       background:
         radial-gradient(120% 90% at 15% 15%, var(--cube-wood-gold), transparent 55%),
         radial-gradient(120% 90% at 25% 25%, var(--cube-wood-warm), transparent 60%),
@@ -405,9 +394,12 @@
         linear-gradient(135deg, rgba(255,255,255,0.16), rgba(0,0,0,0.08)),
         linear-gradient(180deg, var(--cube-wood-base), var(--cube-wood-deep));
 
+      /* Innenrahmen wie W1 */
       box-shadow:
         inset 0 0 0 2px var(--w1-innerframe),
         0 0 0 1px rgba(255,255,255,0.08) inset;
+
+      z-index: 2;
     }
 
     .controls{
@@ -470,17 +462,11 @@
         <img id="spriteMaster" class="w1Sprite hidden" alt="W1 Sprite Master Cache" />
       </div>
 
-      <!-- =====================================================
-           NEU: Doppel-Würfelfläche (Q0 + Q1) verbunden + Schatten
-           ===================================================== -->
-      <div class="doubleFaceLayer" aria-label="Doppelwürfelfläche Q0+Q1">
-        <div class="doubleFaceShadow" aria-hidden="true"></div>
-        <div class="doubleFace" aria-label="Verbundenes Doppel-Objekt">
-          <div class="face" aria-label="W1 Würfelfläche Q0"></div>
-          <div class="face" aria-label="W1 Würfelfläche Q1"></div>
-        </div>
+      <!-- NEU: Verbundene Würfelfläche Q0+Q1 als EIN Bild + Schatten ins Boxinnere -->
+      <div class="doubleCubeLayer" id="doubleCubeLayer" aria-label="Doppel-Würfelfläche Q0+Q1">
+        <div class="doubleCubeShadow" aria-hidden="true"></div>
+        <div class="doubleCubeFace" aria-label="Doppel-Würfelfläche (verbunden)"></div>
       </div>
-
     </div>
 
     <div class="controls">
@@ -498,6 +484,9 @@
 
     const spriteQ1     = document.getElementById("spriteQ1");
     const spriteMaster = document.getElementById("spriteMaster");
+
+    // NEU: Doppel-Würfelfläche soll sichtbar sein, W1/Sprites nicht
+    const doubleCubeLayer = document.getElementById("doubleCubeLayer");
 
     function setBoardSquare(){
       const w = Math.round(boardEl.getBoundingClientRect().width);
@@ -723,8 +712,26 @@
       await buildSpritesAndHideDom();
     }
 
+    // ---------------------------
+    // WICHTIGER FIX für deinen Schritt:
+    // Wir zeigen JETZT NUR die verbundene Doppel-Würfelfläche (Q0+Q1).
+    // Alles andere bleibt im Code, wird aber unsichtbar geschaltet.
+    // Random bleibt drin (du wolltest es nicht verlieren).
+    // ---------------------------
+    function showOnlyDoubleCube(){
+      // Doppelwürfel sichtbar
+      if(doubleCubeLayer) doubleCubeLayer.style.display = "";
+
+      // W1 & Sprite-Logik ausblenden (damit NICHTS "irgendwo klein" auftaucht)
+      if(w1Master) w1Master.style.display = "none";
+      if(w1Q1Dom)  w1Q1Dom.style.display  = "none";
+      if(spriteQ1) spriteQ1.style.display = "none";
+      if(spriteMaster) spriteMaster.style.display = "none";
+    }
+
     btn.addEventListener("click", () => {
-      reroll().catch(console.error);
+      // Random bleibt technisch vorhanden, aber wir zeigen weiter nur den Doppelwürfel
+      reroll().catch(console.error).finally(showOnlyDoubleCube);
     });
 
     window.addEventListener("load", () => {
@@ -733,14 +740,14 @@
       setTimeout(setBoardSquare, 80);
 
       buildGridOnce();
-      reroll().catch(console.error);
+      reroll().catch(console.error).finally(showOnlyDoubleCube);
     });
 
     window.addEventListener("resize", () => {
       setBoardSquare();
       requestAnimationFrame(setBoardSquare);
-      // Sprite neu erzeugen (damit es bei Größenänderung scharf bleibt)
-      reroll().catch(console.error);
+      // Random bleibt, aber Darstellung bleibt Doppelwürfel
+      reroll().catch(console.error).finally(showOnlyDoubleCube);
     });
   </script>
 </body>
